Inserção de dados funcionando, tela de listagem estilizada

--- a/ChefInovador/src/components/forms/Select.module.css
+++ b/ChefInovador/src/components/forms/Select.module.css
@@ -1,21 +1,23 @@
 .form_control{
     display: flex;
     flex-direction: column;
+    width: 500px;
     margin-bottom: 1em;
 }
 
 .form_control label{
-    padding: .7em;
+    padding: .5em;
     border-radius: 0;
     border: none;
-    color: #04042e;
+    color: #31c895;
     font-weight: bold;
 }
 
 .form_control select{
-    width: 1000px;
+    width: 220px;
     padding: 20px;
-    border-radius: 0;
-    border: none;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    min-height: 30px;
     color: #7B7B7B;
 }
