--- a/ChefInovador/src/components/forms/Input.module.css
+++ b/ChefInovador/src/components/forms/Input.module.css
@@ -1,21 +1,24 @@
 .form_control{
     display: flex;
     flex-direction: column;
+    width: 500px;
     margin-bottom: 1em;
 }
 
 .form_control label{
-    padding: .7em;
+    padding: .5em;
     border-radius: 0;
     border: none;
-    color: #ffffff;
+    color: #31c895;
     font-weight: bold;
 }
 
 .form_control input{
     padding: 10px;
-    width: 500px;
-    border-radius: 50px;
+    width: 200px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    min-height: 30px;
 }
 
 .form_control input::placeholder{
