--- a/ChefInovador/src/components/pages/Home.module.css
+++ b/ChefInovador/src/components/pages/Home.module.css
@@ -1,4 +1,7 @@
 .home_container{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
     background-image: url('./backgroundHome.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -7,9 +10,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 4em;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+
 .home_container h1{
     font-size: 2em;
     margin-bottom: .5em;
