--- a/ChefInovador/src/components/pages/ListRecipe.module.css
+++ b/ChefInovador/src/components/pages/ListRecipe.module.css
@@ -1,18 +1,36 @@
-.recipeListContainer {
+/* ListRecipe.module.css */
+.container {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
     background-image: url('./backgroundHome.jpg');
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2em;
+    justify-content: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.recipeListContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 80vw;
+    max-height: 80vh;
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
-    width: 100%;
-    margin: 0 auto;
+    padding: 20px;
+    overflow: auto; /* Necessário para o InfiniteScroll */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .recipeCard {
-    width: 100%;
+    width: 98%;
+    height: 500px;
+    max-height: 800px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -20,17 +38,17 @@
     margin-bottom: 1em;
 }
 
-.recipeCard h2 {
-    margin: 0;
-    color: #31c895;
-}
-
 .recipeImage {
-    width: 100%;
+    width: 200px;
     height: auto;
     border-radius: 10px;
     margin-top: 0.5em;
     margin-bottom: 1em;
+}
+
+.recipeCard h2 {
+    margin: 0;
+    color: #31c895;
 }
 
 .recipeCard h3 {
@@ -52,4 +70,19 @@
 .recipeCard p {
     margin: 1em 0 0 0;
     color: #333;
+}
+
+/* Estilização opcional para a barra de rolagem */
+.recipeListContainer::-webkit-scrollbar {
+    width: 8px;
+}
+
+.recipeListContainer::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+.recipeListContainer::-webkit-scrollbar-thumb {
+    background: #31c895;
+    border-radius: 10px;
 }
