--- a/ChefInovador/src/components/layout/Container.module.css
+++ b/ChefInovador/src/components/layout/Container.module.css
@@ -1,8 +1,17 @@
 .container{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    background-image: url('./backgroundHome.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     display: flex;
-    background-color: #31c895;
     flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
     margin: 0 auto;
+    justify-content: space-between;
     flex-wrap: wrap;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
