--- a/ChefInovador/src/components/pages/CreateRecipe.module.css
+++ b/ChefInovador/src/components/pages/CreateRecipe.module.css
@@ -1,6 +1,6 @@
 .createRecipeContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
     width: 100vw;
@@ -36,10 +36,14 @@ form {
 .previewContainer {
     width: 400px;
     height: 650px;
+    max-height: 530px;
+    overflow-y: auto;
+    overflow-x: hidden;
     display: flex;
+    flex-direction: column;
     position: absolute;
     right: 450px;
-    top: 50px;
+    top: 180px;
     padding: 50px;
     background-color: transparent;
     color: black;
@@ -48,9 +52,11 @@ form {
 
 .previewContainer h2 {
     margin-bottom: 20px;
+    /* max-width: 400px; */
+    word-wrap: break-word;
 }
 
-.previewContainer p {
+.previewContainer pre {
     margin: 15px 0;
 }
 
@@ -74,3 +80,5 @@ button:hover{
     background-color: #31c896ae;
     color: #ffffff;
 }
+
+
