--- a/ChefInovador/src/components/pages/DetailRecipe.module.css
+++ b/ChefInovador/src/components/pages/DetailRecipe.module.css
@@ -15,7 +15,7 @@
 	width: 100%;
 	display: flex;
 	justify-content: center;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 }
 
 .recipeImage {
@@ -41,6 +41,9 @@
 .preparationSection {
 	margin-top: 50px;
 	width: 100%;
+	max-height: 100px;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .ingredientsSection h2,
