--- a/ChefInovador/src/components/pages/ListRecipe.module.css
+++ b/ChefInovador/src/components/pages/ListRecipe.module.css
@@ -12,3 +12,7 @@
     justify-content: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.Select{
+    width: 800px;
+}
